probably complete GsonSkillRepositoryImpl ))